--- a/kzen-auto-jvm/src/main/resources/public/style.css
+++ b/kzen-auto-jvm/src/main/resources/public/style.css
@@ -15,6 +15,41 @@
 }
 
 
+.footer {
+    /*position: absolute;
+    bottom: 0;*/
+
+    height: 40px;
+    position: fixed;
+    bottom:0%;
+    width:100%;
+    background-color: rgba(0, 0, 0, 0.50);
+    opacity: 1;
+}
+
+
+.actionSeparator {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.downArrow {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+    height: 2em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.actionColumn {
+    width: 20em;
+}
+
 .actionController {
-    border: 4px dotted blue;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 0.5em;
 }
