--- a/kzen-auto-jvm/src/main/resources/public/style.css
+++ b/kzen-auto-jvm/src/main/resources/public/style.css
@@ -10,15 +10,42 @@
     font-family: Arial,Helvetica,sans-serif;
 }
 
+
+.rootLoader {
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  animation: rootLoader 2s linear infinite;
+}
+@keyframes rootLoader {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.fade-in {
+   animation: fadeIn 5.0s ease forwards;
+}
+
+
+
+
+/* TODO: migrate to code-based style for below */
+
+
 .child {
     margin-left: 1em;
 }
 
 
 .footer {
-    /*position: absolute;
-    bottom: 0;*/
-
     height: 40px;
     position: fixed;
     bottom:0%;
@@ -34,18 +61,6 @@
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
-/*
-
-.downArrow {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-
-    height: 2em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-}
-*/
 
 .actionColumn {
     width: 20em;
@@ -56,30 +71,6 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 0.5em;
 }
-
-
-/*
-.execNone {
-
-}
-
-.execPending {
-    background-color: rgb(225, 225, 225);
-}
-
-.execRunning {
-    background-color: yellow;
-}
-
-.execSuccess {
-    background-color: green;
-}
-
-.execFailed {
-    background-color: red;
-}
-*/
-
 
 .execNext {
     background-color: gold;
