--- a/kzen-auto-jvm/src/main/resources/public/style.css
+++ b/kzen-auto-jvm/src/main/resources/public/style.css
@@ -1,4 +1,4 @@
-@import url(https://cloud.typography.com/7463094/7169552/css/fonts.css);
+/*@import url(https://cloud.typography.com/7463094/7169552/css/fonts.css);*/
 
 #root {
     position: absolute;
@@ -7,71 +7,38 @@
     right: 0;
     bottom: 0;
     color: #16103F;
-    font-family: Arial,Helvetica,sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .rootLoader {
-  border: 4px solid #f3f3f3; /* Light grey */
-  border-top: 4px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  animation: rootLoader 2s linear infinite;
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: rootLoader 2s linear infinite;
 }
+
 @keyframes rootLoader {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
 
 .fade-in {
    animation: fadeIn 5.0s ease forwards;
 }
 
-
-
-
-/* TODO: migrate to code-based style for below */
-
-
-.child {
-    margin-left: 1em;
-}
-
-
-.footer {
-    height: 40px;
-    position: fixed;
-    bottom:0%;
-    width:100%;
-    background-color: rgba(0, 0, 0, 0.50);
-    opacity: 1;
-}
-
-
-.actionSeparator {
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.actionColumn {
-    width: 20em;
-}
-
-
-.actionController {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 0.5em;
-}
-
-.execNext {
-    background-color: gold;
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
