--- a/kzen-auto-jvm/src/main/resources/public/style.css
+++ b/kzen-auto-jvm/src/main/resources/public/style.css
@@ -46,4 +46,5 @@
 
 .glowingText {
     text-shadow: 1px 1px 3px rgba(255, 215, 0, 0.5);
+//    text-shadow: 1px 1px 3px rgba(255, 184, 45, 0.5);
 }
