query run controller progress

--- a/kzen-auto-jvm/src/main/resources/public/style.css
+++ b/kzen-auto-jvm/src/main/resources/public/style.css
@@ -1,5 +1,7 @@
 /*@import url(https://cloud.typography.com/7463094/7169552/css/fonts.css);*/
 
+// NB: referenced in CssClasses.kt
+
 #root {
     position: absolute;
     left: 0;
